samples/_failures_safe/1761339312_b962fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_390b9073.c: In function ‘subtract_matrices’:
./samples/SAFE/__tmp_390b9073.c:164:9: error: expected declaration or statement at end of input
  164 |         result->data[i] = malloc(result->cols * sizeof(int));
      |         ^~~~~~
./samples/SAFE/__tmp_390b9073.c:164:9: error: expected declaration or statement at end of input
